--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.8",
+    "@types/uuid": "^3.4.5",
+    "aws-sdk": "^2.506.0",
     "dotenv": "^8.0.0",
+    "dynamoose": "^1.10.0",
     "mocha": "^6.2.0",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript-eslint-parser": "^22.0.0",
+    "uuid": "^3.3.2"
   }
 }
